# Ferrum3D

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  GpuDatabaseSampleCode.cpp  README.md  configure.bat  setup.bat  setup.py
FeCore/: CMakeLists.txt
FeCore/Assets/: FeAssetManager.cpp
FeCore/Bindings/: CMakeLists.txt
FeCore/Bindings/Console/: FeLog.cpp
FeCore/Bindings/Containers/: ByteBuffer.cpp
FeCore/Bindings/Math/: Matrix4x4F.cpp
FeCore/Bindings/Modules/: Engine.cpp
FeCore/Console/: FeConsole.cpp  FeConsole.h
FeCore/FeCore/Allocators/: MonotonicAllocator.h
FeCore/FeCore/Assets/: Asset.h  AssetCommon.h  AssetManager.cpp  AssetManager.h  AssetProviderDev.h  AssetRegistry.h  AssetStorage.h  FeAssetManager.h  IAssetLoader.h  IAssetManager.h  IAssetProvider.h  WeakAsset.h
FeCore/FeCore/Base/: Base.h  CompilerTraits.h  Platform.h  PlatformInclude.h  PlatformTraits.h
FeCore/FeCore/Console/: Console.cpp  Console.h  ConsoleLogger.cpp  ConsoleLogger.h  FeConsole.cpp  FeLog.h  IConsoleLogger.h
FeCore/FeCore/Containers/: ArraySlice.h  ArraySliceMut.h  ByteBuffer.cpp  ByteBuffer.h  IByteBuffer.h  List.h
FeCore/FeCore/EventBus/: EventBus.h  FrameEvents.h
FeCore/FeCore/IO/: BaseIO.cpp  FileHandle.cpp  FileHandle.h  FileStream.cpp  FileStream.h  StdoutStream.h  StreamBase.h
FeCore/FeCore/Jobs/: FeJobSystem.h  IJobScheduler.h  Job.h  JobScheduler.cpp  JobScheduler.h  JobSystem.cpp  JobSystem.h  JobTree.h  ParallelQueue.h  SignalJob.h
FeCore/FeCore/Math/: Colors.cpp  Colors.h  FeVector3.h  FeVector4.h  FeVectorMath.h  Half.h  MathUtils.h  Matrix4x4F.h  Vector3.h  Vector4.h  VectorMath.h
FeCore/FeCore/Memory/: Allocator.h  AllocatorBase.cpp  AllocatorBase.h  BasicSystemAllocator.h  HeapAllocator.cpp  HeapAllocator.h  IAllocator.h  IBasicAllocator.h  Memory.h  Object.h  ReferenceCounter.h  SharedPtr.h  StackAllocator.h
FeCore/FeCore/Modules/: DynamicLibrary.cpp  DynamicLibrary.h  Environment.cpp  Environment.h  Singleton.h
FeCore/FeCore/Parallel/: Interlocked.cpp  Interlocked.h  Locker.h  Mutex.cpp  Mutex.h  Semaphore.cpp  Semaphore.h
FeCore/FeCore/RTTI/: RTTI.h  Type.h
FeCore/FeCore/SIMD/: CommonSIMD.h  SIMDIntrin.h
FeCore/FeCore/Scene/: Entity.h  FeEntity.h  FeScene.h  Scene.h
FeCore/FeCore/Strings/: FeUnicode.h  Format.cpp  Format.h  String.h  StringSlice.h
FeCore/FeCore/Time/: DateTime.cpp  DateTime.h  TimeSpan.h
FeCore/FeCore/Utils/: BoolPointer.h  CoreUtils.h  Interlocked.cpp  Interlocked.h  Platform.h  Result.h  SortedStringVector.h  String.h  StringSlice.h  StringUtils.h  UUID.h
FeCore/Jobs/: FeJobSystem.cpp  FeJobSystem.h
FeCore/Math/: FeHalf.h  FeVector3.h  FeVector4.h
FeCore/Scene/: FeEntity.h  FeScene.h
FeCore/Tests/: CMakeLists.txt  main.cpp
FeCore/Tests/Assets/: TestAsset1.txt  TestAsset2.txt  TestAssetLoader.h
FeCore/Tests/Containers/: List.cpp
FeCore/Tests/Math/: Matrix4x4.cpp  Vector3.cpp
FeCore/Tests/Memory/: StackAllocator.cpp
FeCore/Tests/Modules/: Environment.cpp  Singleton.cpp
FeCore/Tests/RTTI/: RTTI.cpp
FeCore/Tests/Strings/: Format.cpp  String.cpp
FeCore/Tests/Utils/: String.cpp  UUID.cpp
FeCore/Time/: DateTime.cpp  TimeSpan.h
FeCore/Utils/: CoreUtils.h  Platform.h  Result.h  StringUtils.cpp
FeModules/FeGraphics/FeGPU/: CMakeLists.txt
FeRenderer/: CMakeLists.txt  FeFrameGraphResource.h  FeGraphicsDevice.cpp  FeGraphicsDevice.h  FePipelineStateBuilder.cpp  FePipelineStateBuilder.h  FeRenderAPI.h  FeRenderContext.cpp  FeRenderContext.h  FeRenderInternal.h  FeRenderPassBuilder.cpp  FeRenderPassBuilder.h  FeRenderPassResources.cpp  FeRenderPassResources.h  FeRenderTarget.cpp  FeRenderTarget.h  FeRenderer.cpp  FeRenderer.h  FeShader.cpp  FeShader.h  FeTexture.cpp  FeTexture.h  FeVertexLayout.cpp  FeVertexLayout.h  FeWindow.cpp  FeWindow.h  IFeGraphicsDevice.h  IFePipelineStateBuilder.h  IFeRenderContext.h  IFeRenderPass.h  IFeRenderTarget.h  IFeShader.h  IFeTexture.h  IFeVertexLayout.h  IFeWindow.h
FeTestProject/: CMakeLists.txt  PixelShader.h  VertexShader.h  main.cpp
FeTestProject/Shaders/: PixelShader.hlsl  VertexShader.hlsl
FerrumCore/: CMakeLists.txt  CoreUtils.h  FeAssetManager.cpp  FeAssetManager.h  FeConsole.cpp  FeJobSystem.cpp  FeJobSystem.h  FeLog.h  FeParallelQueue.h  FeStackAllocator.h  FeVector.cpp  FeVector.h  Platform.h  Reflection.gen.cpp  StringUtils.h
FerrumCore/Bindings/: CMakeLists.txt
FerrumCore/Bindings/Assets/: Asset.cpp  AssetManager.cpp  AssetRegistry.cpp
FerrumCore/Bindings/Console/: FeLog.cpp
FerrumCore/Bindings/Containers/: ByteBuffer.cpp
FerrumCore/Bindings/ECS/: ArchetypeChunk.cpp  CallbackSystem.cpp  ComponentType.h  EntityQuery.cpp  EntityRegistry.cpp  World.cpp
FerrumCore/Bindings/Math/: Matrix4x4F.cpp  (+1 more)
FerrumCore/Tests/: CMakeLists.txt  main.cpp
FerrumCore/include/: CoreUtils.h  FeConsole.h  FeHalf.h  FeLog.h  FeVector.h  StringUtils.h
FerrumCore/src/: StringUtils.cpp
FerrumModules/Graphics/: CMakeLists.txt
FerrumModules/GraphicsHAL/: CMakeLists.txt
FerrumModules/OsmiumAssets/: CMakeLists.txt
FerrumModules/OsmiumGPU/: CMakeLists.txt
FerrumRenderer/: CMakeLists.txt  FeGraphicsDevice.cpp  FeGraphicsDevice.h  FeRenderAPI.h  FeRenderer.cpp  FeRenderer.h  FeWindow.cpp  FeWindow.h  IFeGraphicsDevice.h  IFeRenderPass.h  IFeWindow.h
FerrumRenderer/include/: FeRenderer.h  FeWindow.h
FerrumRenderer/src/: FeRenderer.cpp  FeWindow.cpp
Modules/Framework/: CMakeLists.txt  Reflection.gen.cpp
Modules/Osmium/: CMakeLists.txt
Samples/FrameGraph/: CMakeLists.txt  main.cpp
Samples/Models/: CMakeLists.txt  FerrumAssetIndex  main.cpp
Samples/Textures/: CMakeLists.txt  FerrumAssetIndex  main.cpp
Samples/Triangle/: CMakeLists.txt  main.cpp
Samples/Uniforms/: CMakeLists.txt  main.cpp
Tools/AssetBuilder/: App.cpp  App.h  CMakeLists.txt  MeshOptimization.cpp  MeshOptimization.h  ModelImporter.cpp  ModelImporter.h  ModelProcessor.cpp  ModelProcessor.h  TextureProcessor.cpp  TextureProcessor.h  Utils.cpp  Utils.h  main.cpp
Tools/TextureCompressor/: CMakeLists.txt  main.cpp
(+1762 files in other folders)
